force-app/main/default - Copy/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personel use</fullName>
                <label>Personel Use</label>
            </value>
            <value>
                <fullName>Enjoyment</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
                <label>Personnel Loan</label>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Akshay education</fullName>
            </value>
            <value>
                <fullName>Mummy</fullName>
                <label>To Mom</label>
            </value>
            <value>
                <fullName>Home Loan EMI</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>New Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>