force-app/main/default - Copy/objects/Expense__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>CASE(MONTH(  Date__c ), 
1, &quot;JAN&quot;, 
2, &quot;FEB&quot;, 
3, &quot;MAR&quot;, 
4, &quot;APL&quot;, 
5, &quot;MAY&quot;, 
6, &quot;JUN&quot;, 
7, &quot;JUL&quot;, 
8, &quot;AUG&quot;, 
9, &quot;SEP&quot;, 
10, &quot;OCT&quot;, 
11, &quot;NOV&quot;, 
12, &quot;DEC&quot;, 
&quot;None&quot;) 
&amp; &quot;, &quot; 
&amp; TEXT(YEAR(  Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month and year</label>
    <type>Text</type>
</CustomField>