force-app/main/default - Copy/objects/Expense__c/recordTypes/Expenditure.recordType-meta.xml
<RecordType>
    <fullName>Expenditure</fullName>
    <active>true</active>
    <label>Expenditure</label>
</RecordType>