force-app/main/default - Copy/objects/Expense__c/recordTypes/lend_money.recordType-meta.xml
<RecordType>
    <fullName>lend_money</fullName>
    <active>true</active>
    <label>Lend Money</label>
</RecordType>