force-app/main/default - Copy/objects/Expense__c/recordTypes/Savings.recordType-meta.xml
<RecordType>
    <fullName>Savings</fullName>
    <active>true</active>
    <label>Savings</label>
</RecordType>