force-app/main/default - Copy/objects/Expense__c/validationRules/category_not_applicable_to.validationRule-meta.xml
<ValidationRule>
    <fullName>category_not_applicable_to</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISPICKVAL( Category__c , &apos;N/A&apos;) ) , OR( ISPICKVAL( Return_Status__c , &apos;Not yet&apos;) ,ISPICKVAL( Return_Status__c , &apos;Returned&apos;)) , !ISCHANGED(  RecordTypeId  ) 
)</errorConditionFormula>
    <errorMessage>the transactions with return status &apos;not yet&apos; or &apos;returned&apos; can not be expenses</errorMessage>
</ValidationRule>