force-app/main/default - Copy/objects/Expense__c/validationRules/expenses_has_to_be_catagorized.validationRule-meta.xml
<ValidationRule>
    <fullName>expenses_has_to_be_catagorized</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Return_Status__c , &apos;Self&apos;) , ISPICKVAL( Category__c , &apos;N/A&apos;),!ISCHANGED(  RecordTypeId  ) )</errorConditionFormula>
    <errorMessage>please provide catagory of expenses</errorMessage>
</ValidationRule>