force-app/main/default - Copy/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Return_Status__c</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>