force-app/main/default - Copy/objects/Expense__c/listViews/Shopping.listView-meta.xml
<ListView>
    <fullName>Shopping</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Category__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Shopping</value>
    </filters>
    <label>Shopping</label>
</ListView>